--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -14,6 +14,10 @@
 </head>
 <body>
 <div class="signup-form">
+  <% if (message.length > 0) { %>
+    <div class="alert alert-danger"><%= message %></div>
+  <% } %>
+
     <form action="/signup" method="post">
 		<h2>Sign Up</h2>
 		<p>Please fill in this form to create an account!</p>
