--- a/views/public.ejs
+++ b/views/public.ejs
@@ -116,7 +116,7 @@
           <ul>
             <li>by: <span><%= entries[i].user %></span></li>
             <% if(entries[i].user === user.local.username) {%>
-              <li class="trash text-right" id='trash'><i class="far fa-trash-alt"></i></li>
+              <li class="private text-right"><i class="fas fa-lock"></i></li>
             <% } %>
           </ul>
         </div>
